--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "prepublishOnly": "tsc -p tsconfig.publish.json",
     "postpublish": "rm -rf dist/",
     "lint": "tslint --project tsconfig.json",
-    "test": "NODE_ENV=mocha LOG_LEVEL=OFF mocha --opts mocha.opts --reporter-options reportFilename=unit,inlineAssets=true,reportTitle=draft-store-client 'src/test/draft/**/*.ts'",
-    "test:coverage": "NODE_ENV=mocha LOG_LEVEL=OFF nyc mocha --opts mocha.opts 'src/test/draft/**/*.ts'",
+    "test": "NODE_ENV=mocha LOG_LEVEL=OFF mocha --opts mocha.opts --reporter-options reportFilename=unit,inlineAssets=true,reportTitle=draft-store-client 'src/test/**/*.ts'",
+    "test:coverage": "NODE_ENV=mocha LOG_LEVEL=OFF nyc mocha --opts mocha.opts 'src/test/**/*.ts'",
     "precommit": "yarn lint",
     "prepush": "yarn test"
   },
@@ -21,8 +21,24 @@
   "author": "HMCTS Reform",
   "license": "MIT",
   "dependencies": {
+    "@hmcts/draft-store-client": "1.1.1",
+    "config": "^1.27.0",
+    "moment": "^2.19.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.0.4",
+    "@types/config": "^0.0.33",
+    "@types/express": "^4.0.38",
+    "@types/mocha": "^2.2.43",
+    "@types/moment": "^2.13.0",
+    "@types/sinon-chai": "^2.7.29",
+    "@types/sinon-express-mock": "^1.3.2",
+    "chai": "^4.1.2",
+    "mocha": "^4.0.1",
+    "mochawesome": "^2.3.1",
+    "nyc": "^11.2.1",
+    "sinon-chai": "^2.14.0",
+    "sinon-express-mock": "^1.3.1",
     "ts-node": "^3.3.0",
     "tslint": "^5.5.0",
     "tslint-config-standard": "^6.0.1",
