--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
     ],
     "target": "es5",
     "typeRoots": [
-      "./node_modules/@types",
-      "./test/types"
+      "./node_modules/@types"
     ]
   }
 }
