--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "prepublishOnly": "tsc -p tsconfig.publish.json",
     "postpublish": "rm -rf dist/",
     "lint": "tslint --project tsconfig.json",
-    "test": "NODE_ENV=mocha LOG_LEVEL=OFF mocha --opts mocha.opts --reporter-options reportFilename=unit,inlineAssets=true,reportTitle=draft-store-client 'src/test/**/*.ts'",
-    "test:coverage": "NODE_ENV=mocha LOG_LEVEL=OFF nyc mocha --opts mocha.opts 'src/test/**/*.ts'",
+    "test": "mocha --opts mocha.opts --reporter-options reportFilename=unit,inlineAssets=true,reportTitle=cmc-draft-store-middleware 'src/test/**/*.ts'",
+    "test:coverage": "nyc mocha --opts mocha.opts 'src/test/**/*.ts'",
     "precommit": "yarn lint",
     "prepush": "yarn test"
   },
@@ -21,19 +21,18 @@
   "author": "HMCTS Reform",
   "license": "MIT",
   "dependencies": {
-    "@hmcts/draft-store-client": "1.1.1",
-    "config": "^1.27.0",
+    "@hmcts/draft-store-client": "^1.1.1",
     "moment": "^2.19.1"
   },
   "devDependencies": {
     "@types/chai": "^4.0.4",
-    "@types/config": "^0.0.33",
     "@types/express": "^4.0.38",
     "@types/mocha": "^2.2.43",
     "@types/moment": "^2.13.0",
     "@types/sinon-chai": "^2.7.29",
     "@types/sinon-express-mock": "^1.3.2",
     "chai": "^4.1.2",
+    "husky": "^0.14.3",
     "mocha": "^4.0.1",
     "mochawesome": "^2.3.1",
     "nyc": "^11.2.1",
