--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,18 @@
 language: node_js
 cache: yarn
 script:
-- yarn --version
-- yarn check --integrity
-- yarn lint
-- yarn test
-- yarn test:coverage
+  - yarn --version
+  - yarn check --integrity
+  - yarn lint
+  - yarn test
+  - yarn test:coverage
 before_install:
-- yarn global add greenkeeper-lockfile@1
+  - yarn global add greenkeeper-lockfile@1
 before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
+after_success:
+  - yarn test:codacy-upload
+  - yarn test:codecov-upload
 deploy:
   provider: npm
   email: jenkins-reform@hmcts.net
