--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "lint": "tslint --project tsconfig.json",
     "test": "mocha --opts mocha.opts --reporter-options reportFilename=unit,inlineAssets=true,reportTitle=cmc-draft-store-middleware 'src/test/**/*.ts'",
     "test:coverage": "nyc mocha --opts mocha.opts 'src/test/**/*.ts'",
+    "test:codacy-upload": "cat ./coverage-report/lcov.info | codacy-coverage",
+    "test:codecov-upload": "nyc report --reporter=json && codecov -f coverage-report/*.json",
     "precommit": "yarn lint",
     "prepush": "yarn test"
   },
@@ -32,6 +34,8 @@
     "@types/sinon-chai": "^2.7.29",
     "@types/sinon-express-mock": "^1.3.2",
     "chai": "^4.1.2",
+    "codacy-coverage": "^2.0.3",
+    "codecov": "^3.0.0",
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
     "mochawesome": "^2.3.1",
