--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">=8.0.0"
   },
   "scripts": {
-    "prepublishOnly": "tsc -p tsconfig.publish.json",
+    "prepublishOnly": "tsc --project tsconfig.publish.json",
     "postpublish": "rm -rf dist/",
     "lint": "tslint --project tsconfig.json",
     "test": "mocha --opts mocha.opts --reporter-options reportFilename=unit,inlineAssets=true,reportTitle=cmc-draft-store-middleware 'src/test/**/*.ts'",
