Specifiy main in package.json and publish it

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "engines": {
     "node": ">=8.0.0"
   },
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
   "scripts": {
     "prepublishOnly": "tsc --project tsconfig.publish.json",
     "postpublish": "rm -rf dist/",
