--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mocha": "^4.0.1",
     "mochawesome": "^3.0.0",
     "nyc": "^11.2.1",
+    "sinon": "^4.1.3",
     "sinon-chai": "^2.14.0",
     "sinon-express-mock": "^2.0.0",
     "ts-node": "^4.0.0",
