--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "prepublishOnly": "tsc --project tsconfig.publish.json",
     "postpublish": "rm -rf dist/",
     "lint": "tslint --project tsconfig.json",
-    "test": "mocha --opts mocha.opts --reporter-options reportFilename=unit,inlineAssets=true,reportTitle=cmc-draft-store-middleware 'src/test/**/*.ts'",
-    "test:coverage": "nyc mocha --opts mocha.opts 'src/test/**/*.ts'",
+    "test": "TS_NODE_TYPE_CHECK=true mocha --opts mocha.opts --reporter-options reportFilename=unit,inlineAssets=true,reportTitle=cmc-draft-store-middleware 'src/test/**/*.ts'",
+    "test:coverage": "TS_NODE_TYPE_CHECK=true nyc mocha --opts mocha.opts 'src/test/**/*.ts'",
     "test:codacy-upload": "cat ./coverage-report/lcov.info | codacy-coverage",
     "test:codecov-upload": "nyc report --reporter=json && codecov -f coverage-report/*.json",
     "precommit": "yarn lint",
